--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
+<meta name="copyrighted-site-verification" content="751f7c8be3fafe65" />
 <center><h1>Ce site appartient a Sylent inc.</h1></center>
 <center><h3>© Sylent inc.</h3></center>
