--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <meta name="copyrighted-site-verification" content="751f7c8be3fafe65" />
-<center><h1>Ce site appartient a Sylent inc.</h1></center>
-<center><h3>© Sylent inc.</h3></center>
+<center><h1>Ce site appartient a FuturaF Services.</h1></center>
+<center><h3>© FuturaF Services.</h3></center>
 <a class="copyrighted-badge" title="Copyrighted.com Registered &amp; Protected" target="_blank" href="https://www.copyrighted.com/website/xlV8iXtOu2RDX0q4"><img alt="Copyrighted.com Registered &amp; Protected" border="0" width="125" height="75" srcset="https://static.copyrighted.com/badges/125x75/01_2x.png 2x" src="https://static.copyrighted.com/badges/125x75/01.png" /></a><script src="https://static.copyrighted.com/badges/helper.js"></script>
